--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: white;
  }
  
  input {
@@ -11,13 +11,9 @@ body {
  }
  
  p {
-  color: red;
-  font-size: 10px;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
   text-align: left;
- }
- 
- h4 {
-  color: #555;
  }
  
  .calculator {
@@ -26,9 +22,6 @@ body {
  }
  
  .form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background-color: white;
   width: 50%;
   border-radius: 4px;
@@ -36,8 +29,6 @@ body {
  }
  
  .form-items {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   margin-bottom: 3px;
  }
@@ -56,6 +47,7 @@ body {
  }
  
  #label {
+   color: lightgreen;
   font-size: 12px;
   text-align: left;
  }
