--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,11 @@ body {
  }
  
  .calculator {
-  display: flex;
+  align-items: center;
   justify-content: center;
+ }
+ .card {
+   align-items: center;
  }
  
  .form {
@@ -26,6 +29,7 @@ body {
   width: 50%;
   border-radius: 4px;
   margin-top: 30px;
+  margin-bottom: 30px;
  }
  
  .form-items {
