--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,60 @@
 body {
   background-color: white;
- }
- 
- input {
+}
+
+input {
   display: block;
   width: 95%;
   margin: 3px 0;
   border-radius: 4px;
   border-color: lightgray;
- }
- 
- p {
-  color: 'black';
+}
+
+p {
+  color: "black";
   font-size: 20px;
   text-align: left;
- }
- 
- .calculator {
+}
+
+.calculator {
   align-items: center;
   justify-content: center;
- }
- .card {
-   align-items: center;
- }
- 
- .form {
+}
+.card {
+  align-items: center;
+  padding: 30px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.form {
   background-color: white;
   width: 50%;
   border-radius: 4px;
   margin-top: 30px;
   margin-bottom: 30px;
- }
- 
- .form-items {
+}
+
+.form-items {
   align-items: center;
   margin-bottom: 3px;
- }
- 
- .button {
+}
+
+.button {
   background-color: black;
   color: green;
   border: none;
   margin: 10px 0;
   padding: 5px 10px;
   cursor: pointer;
- }
- 
- .button:hover {
+}
+
+.button:hover {
   opacity: 0.8;
- }
- 
- #label {
-   color: lightgreen;
+}
+
+#label {
+  color: lightgreen;
   font-size: 12px;
   text-align: left;
- }
+}
