--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,18 @@ p {
   font-size: 20px;
   text-align: left;
 }
+.button {
+  background-color: black;
+  color: green;
+  border: none;
+  margin: 10px 0;
+  padding: 5px 10px;
+  cursor: pointer;
+}
 
+.button:hover {
+  opacity: 0.8;
+}
 .calculator {
   align-items: center;
   justify-content: center;
@@ -28,15 +39,10 @@ p {
 }
 .column {
   background-color: gray;
-  width: 70%;
+  width: 30%;
 }
 .directions {
   background-color: lightgreen;
-}
-.projectManager {
-  background-color: lightgray;
-  height: auto;
-  width: 30%;
 }
 
 .form {
@@ -52,21 +58,19 @@ p {
   margin-bottom: 3px;
 }
 
-.button {
-  background-color: black;
-  color: green;
-  border: none;
-  margin: 10px 0;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-
-.button:hover {
-  opacity: 0.8;
-}
-
 #label {
   color: lightgreen;
   font-size: 12px;
   text-align: left;
+}
+.listGroup {
+  font-size: small;
+  height: 90%;
+  width: 80%;
+  overflow: scroll;
+}
+.projectManager {
+  background-color: greenyellow;
+  height: auto;
+  width: 70%;
 }
