--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color: lightblue;
 }
 
 input {
@@ -25,7 +25,7 @@ p {
 }
 
 .button:hover {
-  opacity: 0.8;
+  opacity: 0.5;
 }
 .calculator {
   align-items: center;
@@ -33,16 +33,13 @@ p {
 }
 .card {
   align-items: center;
-  padding: 10px;
+  padding: 5px;
   margin-left: 5px;
   margin-right: 5px;
 }
 .column {
   background-color: gray;
   width: 30%;
-}
-.directions {
-  background-color: lightgreen;
 }
 
 .form {
@@ -64,13 +61,22 @@ p {
   text-align: left;
 }
 .listGroup {
-  font-size: small;
+  background-color: gray;
+  font-size: medium;
+  height: fit-content;
+  width: 100%;
+  overflow: scroll;
+}
+.listGroupHeader {
+  align-self: center;
+}
+.listGroupItem {
+  background-color: lightgray;
+  font-size: large;
   height: 90%;
   width: 80%;
-  overflow: scroll;
 }
 .projectManager {
   background-color: greenyellow;
-  height: auto;
   width: 70%;
 }
