Restored functionality to swap units
Components once again display context-sensitive information related to isImperialUnit.
BUG: swapping units will hide any new walls laid out since last refresh. Though they still make it to database.

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,9 @@ input {
   background-color: gray;
   width: 100%;
 }
-
+.emptyList {
+  align-self: center;
+}
 .form {
   background-color: white;
   width: 100%;
