--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,12 @@ input {
 .calculator {
   align-items: center;
   justify-content: center;
-  width: 100%
+  width: 100%;
 }
 .calcInstance {
   align-items: center;
   justify-content: center;
-  width: 100%
+  width: 100%;
 }
 .card {
   align-items: center;
@@ -81,6 +81,6 @@ p {
   font-size: 20px;
   text-align: left;
 }
-.projectManager {
+.dashboard {
   width: 100%;
 }
