--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@ input {
   margin-right: 5px;
 }
 .column {
-  background-color: gray;
   width: 100%;
 }
 .emptyList {
@@ -57,7 +56,7 @@ input {
   text-align: left;
 }
 .listGroup {
-  background-color: gray;
+  align-items: center;
   font-size: medium;
   height: fit-content;
   width: 100%;
@@ -67,7 +66,9 @@ input {
   align-self: center;
 }
 .listGroupItem {
-  background-color: lightgray;
+  background-color: azure;
+  align-items: center;
+  justify-content: center;
   font-size: large;
   height: 90%;
   width: 80%;
